# skeletons

./: .gitignore  LICENSE  README.md  devlog.md  matplotlibrc
cpp_cmake_doctest/: CMakeLists.txt  README.md
cpp_cmake_doctest/src/: libs.hpp
cpp_doctest/test/: test_main.cpp
cpp_make_doctest/: .gitignore  Makefile  README.md  config.mk
cpp_make_doctest/src/: Makefile  main.cpp
cpp_make_doctest/test/: Makefile  test_libs.cpp
f90_make_mintest/: Makefile  README.md  variables.mk
f90_make_mintest/src/: Makefile  libs.f90  main.f90
f90_make_mintest/tests/: Makefile  mintest.f90  test_libs.f90  test_other.f90
latex_aastex/: .gitignore  Makefile  README.md  main.tex  reference.bib
python_default/: Makefile  README.md  requirements.txt
python_default_rye/: Makefile  pyproject.toml
python_matplotlib/: Makefile  README.md  common.py  matplotlibrc  plot_image.py  plot_line.py
python_nanobind/: Makefile  README.md  my_module.cpp
python_scripts_nanobind/: .gitignore  README.md
python_scripts_piptools/: Makefile  README.md  pyproject.toml  requirements.txt
python_scripts_poetry/: Makefile  README.md  pyproject.toml
python_scripts_rye/: Makefile  README.md  pyproject.toml
python_scripts_uv/: README.md  pyproject.toml
python_venv_nanobind/: CMakeLists.txt  Makefile  main.py  pyproject.toml
python_venv_uv/: Makefile  requirements.txt
