[project]
name = "default-python-env"
version = "0.0.1"
description = "Scripts for data analysis"
authors = [{ name = "H. Iijima", email = "dummy@email.com" }]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "ipython",
  "ipykernel",
  "pip",
  "ruff",
  "mypy",
  "pytest",
  "jinja2",
  "flask",
]
requires-python = ">=3.11"

[tool.rye]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
