[project]
name = "project-name"
version = "0.0.1"
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "ipykernel",
  # "ruff",
  # "mypy",
  # "pytest",
  # "flask @ git+https://github.com/pallets/flask",
  # "flask @ file:///Users/iijimahr/flask",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
