[tool.poetry]
name = "project-name"
version = "0.0.1"
description = "Scripts for data analysis"
authors = ["H. Iijima <dummy@email.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "~=1.26"
matplotlib = "~=3.8"
scipy = "~=1.12"
ipykernel = "~=6.29"
# ruff = "~=0.2"
# mypy = "~=1.8"
# pytest = "~=8.0"
# flask = { git = "https://github.com/pallets/flask" }
# flask = { path = "/Users/iijimahr/flask", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
