[tool.poetry]
name = "project-name"
version = "0.0.1"
description = "Scripts for data analysis"
authors = ["H. Iijima <dummy@email.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "*"
matplotlib = "*"
scipy = "*"
ipykernel = "*"
# ruff = "*"
# mypy = "*"
# pytest = "*"
# flask = { git = "https://github.com/pallets/flask" }
# flask = { path = "/Users/iijimahr/flask", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
