[project]
name = "project-name"
version = "0.0.1"
description = "Scripts for data analysis"
authors = [{ name = "H. Iijima", email = "dummy@email.com" }]
dependencies = [
  "numpy~=1.26",
  "matplotlib~=3.8",
  "scipy~=1.12",
  "ipykernel~=6.29",
  # "ruff~=0.2",
  # "mypy~=1.8",
  # "pytest~=8.0",
  # "flask @ git+https://github.com/pallets/flask",
  # "flask @ file:///Users/iijimahr/flask",
]
requires-python = ">=3.11"

[tool.rye]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
