[project]
name = "project-name"
version = "0.0.1"
description = "Scripts for data analysis"
authors = [{ name = "H. Iijima", email = "dummy@email.com" }]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "ipykernel",
  # "ruff",
  # "mypy",
  # "pytest",
  # "flask @ git+https://github.com/pallets/flask",
  # "flask @ file:///Users/iijimahr/flask",
]
requires-python = ">=3.12"

[tool.rye]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
